[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/menu/submit_btn_focus.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons_bangla/pw_hide2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/buttons_bangla/pw_show.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/menu/submit_btn.png" type="Texture" id=5]
[ext_resource path="res://script/Register.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/back_btn.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 6 )

[node name="BackBtn" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )

[node name="email" type="Label" parent="."]
margin_left = 213.0
margin_top = 229.0
margin_right = 407.0
margin_bottom = 251.0
text = "enter email address"

[node name="EmailField" type="TextEdit" parent="."]
margin_left = 211.0
margin_top = 268.0
margin_right = 463.0
margin_bottom = 306.0

[node name="EmailValid" type="Label" parent="."]
visible = false
margin_left = 219.0
margin_top = 328.0
margin_right = 439.0
margin_bottom = 350.0
text = "email address not valid"

[node name="username" type="Label" parent="."]
margin_left = 216.0
margin_top = 377.0
margin_right = 720.0
margin_bottom = 424.0
text = "enter username
(this will be shown on scoreboards)"
max_lines_visible = 2

[node name="UsernameField" type="LineEdit" parent="."]
margin_left = 222.0
margin_top = 447.0
margin_right = 468.0
margin_bottom = 479.0

[node name="UserFieldCheck" type="Label" parent="."]
visible = false
margin_left = 222.0
margin_top = 488.0
margin_right = 398.0
margin_bottom = 510.0
text = "Username is empty"

[node name="pass" type="Label" parent="."]
margin_left = 214.0
margin_top = 530.0
margin_right = 408.0
margin_bottom = 552.0
text = "enter password"

[node name="PassField" type="LineEdit" parent="."]
margin_left = 219.0
margin_top = 578.0
margin_right = 454.0
margin_bottom = 621.0
secret = true

[node name="SubmitBtn" type="TextureButton" parent="."]
margin_left = 366.0
margin_top = 757.0
margin_right = 566.0
margin_bottom = 833.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 1 )

[node name="ShowPass" type="TextureButton" parent="."]
margin_left = 491.0
margin_top = 572.0
margin_right = 567.0
margin_bottom = 622.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="PassFieldCheck" type="Label" parent="."]
visible = false
margin_left = 226.0
margin_top = 636.0
margin_right = 430.0
margin_bottom = 658.0
text = "Password field empty"

[node name="Fail" type="Label" parent="."]
visible = false
margin_left = 226.0
margin_top = 698.0
margin_right = 438.0
margin_bottom = 720.0
text = "Something went wrong."

[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="SubmitBtn" to="." method="_on_SubmitBtn_pressed"]
[connection signal="toggled" from="ShowPass" to="." method="_on_ShowPass_toggled"]
